<resources>
    <string name="app_name">FindALot</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string-array name="floors_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="OneFScroll">First Floor</string>
    <string name="TwoFScroll">Second Floor</string>
    <string name="ThreeFScroll">Third Floor</string>
    <string name="lgout">LOGOUT</string>
    <string name="prkd">I\'M PARKED</string>
</resources>
